@@ -134,3 +134,4 @@ tab.Type=Typ
 tab.Value=Hodnota
 param.AutomaticSortingByTime=Automatick\u00E9 \u0159azen\u00ED ud\u00E1lost\u00ED dne. \u0158azen\u00ED se uplat\u0148uje po ru\u010Dn\u00ED editaci \u010Dasu v tabulce ud\u00E1lost\u00ED.
 tab.Index=\u010C.
+rpt.DetailInTableProj=Podrobn\u00FD report v seskupen\u00FD na projekty
