@@ -134,3 +134,4 @@ tab.Type=Typ
 tab.Value=Preis
 param.AutomaticSortingByTime=Automatic sorting of the Event. The feature is applied if you change a time value in an event table.
 tab.Index=#
+rpt.DetailInTableProj=Detail report grouped by project
